AC_INIT([csvcut], [1.0], [gati.gergely@gmail.com])
VERSION="$PACKAGE_VERSION"
AC_SUBST([VERSION])
AC_DEFINE_UNQUOTED([VERSION_NUMBER], ["$PACKAGE_VERSION"], [Version number])
AM_INIT_AUTOMAKE([foreign -Wall -Werror])
AC_PROG_CC
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile src/Makefile doc/Makefile test/Makefile])
AC_OUTPUT
